Tests, bugfixes, new features