@@ -1,6 +1,9 @@
 package org.vinniks.parsla.parser;
 
-import lombok.*;
+import lombok.AccessLevel;
+import lombok.Getter;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
 import org.vinniks.parsla.exception.GrammarException;
 import org.vinniks.parsla.exception.ParsingException;
 import org.vinniks.parsla.grammar.Grammar;
@@ -10,14 +13,21 @@ import org.vinniks.parsla.tokenizer.Token;
 import org.vinniks.parsla.tokenizer.TokenIterator;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.function.Function;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import static java.util.Collections.emptySet;
 
-public class Parser {
+@SuppressWarnings("unused")
+public class Parser<P> {
     @Getter
     private final Grammar grammar;
 
@@ -27,20 +37,16 @@ public class Parser {
     private Map<String, Collection<CompiledOption>> compiledRules;
     private CompiledRuleItem ignoredTokenRuleItem;
 
-    protected Parser(@NonNull Grammar grammar, @NonNull Set<String> ignoredTokenTypes, Function<String, String> supportedTokenTypeFn) {
+    protected Parser(@NonNull Grammar grammar, @NonNull Set<String> ignoredTokenTypes) {
         if (ignoredTokenTypes.stream().anyMatch(Objects::isNull)) {
             throw new NullPointerException("Ignored token types must not contain nulls");
         }
 
         this.grammar = grammar;
         this.ignoredTokenTypes = Set.copyOf(ignoredTokenTypes);
-        compileRules(supportedTokenTypeFn);
+        compileRules();
         createIgnoredTokenRuleItem();
         LeftRecursionDetector.detect(compiledRules);
-    }
-
-    public Parser(@NonNull Grammar grammar, @NonNull Set<String> ignoredTokenTypes) {
-        this(grammar, ignoredTokenTypes, Function.identity());
     }
 
     public Parser(Grammar grammar) {
@@ -48,27 +54,27 @@ public class Parser {
     }
 
     public final void parse(
-        @NonNull TokenIterator tokenIterator,
+        @NonNull TokenIterator<P> tokenIterator,
         @NonNull String rootRuleName,
-        @NonNull ParserOutputListener outputListener
+        @NonNull ParserOutputListener<P> outputListener
     ) throws IOException {
         var rootItem = new CompiledRuleItem(rootRuleName, true, getOptions(rootRuleName));
         var paths = new ArrayList<Path<?>>();
         var ignoredTokenRuleNode = ignoredTokenRuleItem != null ? new RuleLookAheadTreeNode(null, ignoredTokenRuleItem, 2) : null;
         paths.add(new Path<>(null, new RuleLookAheadTreeNode(ignoredTokenRuleNode, rootItem,1)));
-        var nextPaths = new ArrayList<Path<TokenParseTreeNode>>();
-        var output = new ParserOutput(outputListener);
+        var nextPaths = new ArrayList<Path<TokenParseTreeNode<P>>>();
+        var output = new ParserOutput<>(outputListener);
 
         while (tokenIterator.hasNext()) {
             var token = tokenIterator.next();
             nextPaths.clear();
-            paths.forEach(path -> findNextPaths(path, token, nextPaths));
+            paths.forEach(path -> findNextPaths(path, token, tokenIterator.position(), nextPaths));
             paths.clear();
 
             if (nextPaths.isEmpty()) {
-                throw new ParsingException(String.format("Unexpected %s", token));
+                throw new ParsingException(String.format("unexpected %s", token), tokenIterator.position());
             } else if (nextPaths.size() == 1) {
-                var nextPath = nextPaths.getFirst();
+                var nextPath = nextPaths.get(0);
                 output.next(nextPath.getParseTreeNode());
 
                 if (nextPath.getLookAheadTreeNode() != null) {
@@ -81,23 +87,21 @@ public class Parser {
 
         if (!paths.isEmpty()) {
             var tailPaths = new ArrayList<Path<?>>();
-            paths.forEach(path -> findTails(path, tailPaths));
+            paths.forEach(path -> findTails(path, tailPaths, tokenIterator.position()));
 
             if (tailPaths.isEmpty()) {
-                throw new ParsingException("Unexpected end of the input");
+                throw new ParsingException("unexpected end of the input", tokenIterator.position());
             } else if (tailPaths.size() > 1) {
-                throw new ParsingException("Ambiguous parsing path detected");
+                throw new ParsingException("Ambiguous parsing path detected", tokenIterator.position());
             } else {
-                output.next(tailPaths.getFirst().getParseTreeNode());
+                output.next(tailPaths.get(0).getParseTreeNode());
             }
         }
 
         output.end();
     }
 
-
-
-    private void compileRules(Function<String, String> supportedTokenTypeFn) {
+    private void compileRules() {
         compiledRules = new LinkedHashMap<>();
 
         grammar.getOptions().forEach(option -> {
@@ -109,21 +113,24 @@ public class Parser {
         grammar.getOptions().forEach(option -> {
             var compiledItems = StreamSupport
                 .stream(option.getItems().spliterator(), false)
-                .map(item -> switch (item) {
-                    case TokenItem tokenItem -> new CompiledRegularTokenItem(
-                        tokenItem.getElevation(),
-                        Optional
-                            .ofNullable(supportedTokenTypeFn.apply(tokenItem.getTokenType()))
-                            .orElse(tokenItem.getTokenType()),
-                        tokenItem.isOutputType(),
-                        tokenItem.getTokenValue(),
-                        tokenItem.isOutputValue()
-                    );
-                    case RuleItem ruleItem -> new CompiledRuleItem(
-                        ruleItem.getRuleName(),
-                        ruleItem.isOutput(),
-                        getOptions(ruleItem.getRuleName())
-                    );
+                .map(item -> {
+                    if (item instanceof TokenItem tokenItem) {
+                        return new CompiledRegularTokenItem(
+                            tokenItem.getElevation(),
+                            tokenItem.getTokenType(),
+                            tokenItem.isOutputType(),
+                            tokenItem.getTokenValue(),
+                            tokenItem.isOutputValue()
+                        );
+                    } else {
+                        var ruleItem = (RuleItem) item;
+
+                        return new CompiledRuleItem(
+                            ruleItem.getRuleName(),
+                            ruleItem.isOutput(),
+                            getOptions(ruleItem.getRuleName())
+                        );
+                    }
                 })
                 .toArray(CompiledItem[]::new);
 
@@ -151,37 +158,46 @@ public class Parser {
             .orElseThrow(() -> new GrammarException(String.format("Unknown grammar rule \"%s\"", ruleName)));
     }
 
-    private void findNextPaths(Path<?> path, Token token, List<Path<TokenParseTreeNode>> nextPaths) {
+    private void findNextPaths(Path<?> path, Token token, P position, List<Path<TokenParseTreeNode<P>>> nextPaths) {
         if (path.getLookAheadTreeNode() != null) {
-            switch (path.getLookAheadTreeNode()) {
-                case RuleLookAheadTreeNode ruleNode -> ruleNode
-                    .explode(path.getParseTreeNode())
-                    .forEach(explodedPath -> findNextPaths(explodedPath, token, nextPaths));
+            if (path.getLookAheadTreeNode() instanceof Parser<?>.RuleLookAheadTreeNode) {
+                @SuppressWarnings("unchecked")
+                var ruleNode = (RuleLookAheadTreeNode) path.getLookAheadTreeNode();
 
-                case TokenLookAheadTreeNode tokenNode -> {
-                    var match = tokenNode.getItem().match(token, ignoredTokenTypes);
+                ruleNode
+                    .explode(path.getParseTreeNode(), position)
+                    .forEach(explodedPath -> findNextPaths(explodedPath, token, position, nextPaths));
+            } else if (path.getLookAheadTreeNode() instanceof Parser<?>.TokenLookAheadTreeNode) {
+                @SuppressWarnings("unchecked")
+                var tokenNode = (TokenLookAheadTreeNode) path.getLookAheadTreeNode();
 
-                    if (match > 0) {
-                        var nextPath = tokenNode.save(path.getParseTreeNode(), token, match);
+                var match = tokenNode.getItem().match(token, ignoredTokenTypes);
 
-                        if (!nextPaths.isEmpty() && nextPaths.getFirst().getParseTreeNode().getMatch() < match) {
-                            nextPaths.clear();
-                        }
+                if (match > 0) {
+                    var nextPath = tokenNode.save(path.getParseTreeNode(), token, position, match);
 
-                        if (nextPaths.isEmpty() || nextPaths.getFirst().getParseTreeNode().getMatch() == match) {
-                            nextPaths.add(nextPath);
-                        }
+                    if (!nextPaths.isEmpty() && nextPaths.get(0).getParseTreeNode().getMatch() < match) {
+                        nextPaths.clear();
+                    }
+
+                    if (nextPaths.isEmpty() || nextPaths.get(0).getParseTreeNode().getMatch() == match) {
+                        nextPaths.add(nextPath);
                     }
                 }
             }
         }
     }
 
-    private void findTails(Path<?> path, Collection<Path<?>> tailPaths) {
+    private void findTails(Path<? extends AbstractParseTreeNode<?, P>> path, Collection<Path<?>> tailPaths, P position) {
         if (path.getLookAheadTreeNode() == null) {
             tailPaths.add(path);
-        } else if (path.getLookAheadTreeNode() instanceof RuleLookAheadTreeNode ruleNode) {
-            ruleNode.explode(path.getParseTreeNode()).forEach(explodedPath -> findTails(explodedPath, tailPaths));
+        } else if (path.getLookAheadTreeNode() instanceof Parser<?>.RuleLookAheadTreeNode) {
+            @SuppressWarnings("unchecked")
+            var ruleNode = (RuleLookAheadTreeNode) path.getLookAheadTreeNode();
+
+            ruleNode
+                .explode(path.getParseTreeNode(), position)
+                .forEach(explodedPath -> findTails(explodedPath, tailPaths, position));
         }
     }
 
@@ -198,9 +214,11 @@ public class Parser {
             super(parent, item, level);
         }
 
-        private Path<TokenParseTreeNode> save(AbstractParseTreeNode<?> parentParseTreeNode, Token token, int match) {
+        private Path<TokenParseTreeNode<P>> save(
+            AbstractParseTreeNode<?, P> parentParseTreeNode, Token token, P position, int match
+        ) {
             return new Path<>(
-                new TokenParseTreeNode(parentParseTreeNode, getLevel(), getItem(), token, match),
+                new TokenParseTreeNode<>(parentParseTreeNode, getLevel(), getItem(), position, token, match),
                 getParent()
             );
         }
@@ -211,7 +229,7 @@ public class Parser {
             super(parent, item, level);
         }
 
-        private Stream<Path<?>> explode(AbstractParseTreeNode<?> parentParseTreeNode) {
+        private Stream<Path<?>> explode(AbstractParseTreeNode<?, P> parentParseTreeNode, P position) {
             return getItem()
                 .getOptions()
                 .stream()
@@ -219,10 +237,17 @@ public class Parser {
                     var explodedNode = getParent();
 
                     for (var item : option.getItems(true)) {
-                        explodedNode = switch (item) {
-                            case AbstractCompiledTokenItem tokenItem -> new TokenLookAheadTreeNode(explodedNode, tokenItem, getLevel() + 1);
-                            case CompiledRuleItem ruleItem -> new RuleLookAheadTreeNode(explodedNode, ruleItem, getLevel() + 1);
-                        };
+                        if (item instanceof AbstractCompiledTokenItem tokenItem) {
+                            explodedNode = new TokenLookAheadTreeNode(
+                                explodedNode, tokenItem, getLevel() + 1
+                            );
+                        } else {
+                            var ruleItem = (CompiledRuleItem) item;
+
+                            explodedNode = new RuleLookAheadTreeNode(
+                                explodedNode, ruleItem, getLevel() + 1
+                            );
+                        }
 
                         if (item instanceof CompiledRegularTokenItem && ignoredTokenRuleItem != null) {
                             explodedNode = new RuleLookAheadTreeNode(explodedNode, ignoredTokenRuleItem, getLevel() + 1);
@@ -230,16 +255,24 @@ public class Parser {
                     }
 
                     return new Path<>(
-                        new RuleParseTreeNode(
+                        new RuleParseTreeNode<>(
                             parentParseTreeNode,
                             getLevel(),
                             getItem(),
+                            position,
                             option.isOutput()
                         ),
                         explodedNode
                     );
                 });
         }
+    }
+
+    @RequiredArgsConstructor(access = AccessLevel.PACKAGE)
+    @Getter(AccessLevel.PACKAGE)
+    private class Path<T extends AbstractParseTreeNode<?, P>> {
+        private final T parseTreeNode;
+        private final AbstractLookAheadTreeNode<?> lookAheadTreeNode;
     }
 }
 
